force-app/main/default/objects/Account/fields/ABK__c.field-meta.xml
<CustomField>
    <fullName>ABK__c</fullName>
    <description>Infowelders</description>
    <label>ABK</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>111 – SBW Gross &gt; 5000qm</fullName>
            </value>
            <value>
                <fullName>112 – VM Gross 1500 – 5000qm</fullName>
            </value>
            <value>
                <fullName>113  –VM klein  800 – 1500 qm</fullName>
            </value>
            <value>
                <fullName>114 – SM 400 – 800 qm</fullName>
            </value>
            <value>
                <fullName>115 – SM &lt; 400 qm</fullName>
            </value>
            <value>
                <fullName>121 – LEH GH Laeger</fullName>
            </value>
            <value>
                <fullName>131 – Dicounter</fullName>
            </value>
            <value>
                <fullName>141 – K&amp;W &gt; 5000 qm</fullName>
            </value>
            <value>
                <fullName>142 – K&amp;W 1500 -  5000 qm</fullName>
            </value>
            <value>
                <fullName>143 – K&amp;W 800 – 1500 qm</fullName>
            </value>
            <value>
                <fullName>144 – K&amp;W 400 – 800 qm</fullName>
            </value>
            <value>
                <fullName>145 – K&amp;W &lt; 400 qm</fullName>
            </value>
            <value>
                <fullName>199 – LEH Zentrale/Verwaltung</fullName>
            </value>
            <value>
                <fullName>211 – Facheinzelhandel</fullName>
            </value>
            <value>
                <fullName>221 – Fachgrosshandel mit Spirituosen</fullName>
            </value>
            <value>
                <fullName>222 – Fachgrosshandelslager ohne Spirituosen</fullName>
            </value>
            <value>
                <fullName>301 – Gastro Grosshandel Deutsch</fullName>
            </value>
            <value>
                <fullName>302 – Gastrogrosshandel Italienisch</fullName>
            </value>
            <value>
                <fullName>303 – Gastrogrosshandel International</fullName>
            </value>
            <value>
                <fullName>304 – Zwischengrosshandel</fullName>
            </value>
            <value>
                <fullName>306 – Inaktiv Gastro Grosshandel</fullName>
            </value>
            <value>
                <fullName>322 – Restaurants</fullName>
            </value>
            <value>
                <fullName>323 – Cafe/Bisto</fullName>
            </value>
            <value>
                <fullName>324 – Erlebnis/Kommunikation</fullName>
            </value>
            <value>
                <fullName>325 – Szene</fullName>
            </value>
            <value>
                <fullName>326 – Events</fullName>
            </value>
            <value>
                <fullName>335 – Top Clients (B2B)</fullName>
            </value>
            <value>
                <fullName>341 – Grossraumdiskothek</fullName>
            </value>
            <value>
                <fullName>343 – Clubdiskothek</fullName>
            </value>
            <value>
                <fullName>344 – Sonstige Diskothek</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>