force-app/main/default/objects/Account/fields/AC_Nielsen_Region__c.field-meta.xml
<CustomField>
    <fullName>AC_Nielsen_Region__c</fullName>
    <description>Infowelders</description>
    <label>Bundesland</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Baden-Württemberg</fullName>
            </value>
            <value>
                <fullName>Bayern</fullName>
            </value>
            <value>
                <fullName>Berlin</fullName>
            </value>
            <value>
                <fullName>Brandenburg</fullName>
            </value>
            <value>
                <fullName>Bremen</fullName>
            </value>
            <value>
                <fullName>Hamburg</fullName>
            </value>
            <value>
                <fullName>Hessen</fullName>
            </value>
            <value>
                <fullName>Mecklenburg-Vorpommern</fullName>
            </value>
            <value>
                <fullName>Niedersachsen</fullName>
            </value>
            <value>
                <fullName>Nordrhein-Westfalen</fullName>
            </value>
            <value>
                <fullName>Rheinland-Pfalz</fullName>
            </value>
            <value>
                <fullName>Saarland</fullName>
            </value>
            <value>
                <fullName>Sachsen</fullName>
            </value>
            <value>
                <fullName>Sachsen-Anhalt</fullName>
            </value>
            <value>
                <fullName>Schleswig-Holstein</fullName>
            </value>
            <value>
                <fullName>Thüringen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>