force-app/main/default/objects/Account/fields/AC_Nielsen_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>AC_Nielsen_Region_Code__c</fullName>
    <description>Infowelders</description>
    <label>AC Nielsen Region Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AC_Nielsen_Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3a</fullName>
            </value>
            <value>
                <fullName>3b</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5+6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>