force-app/main/default/objects/Account/fields/Accepts__c.field-meta.xml
<CustomField>
    <fullName>Accepts__c</fullName>
    <description>Accepts Express Release Bill of Lading - Used by Distributor dB</description>
    <label>Accepts Express Release Bill of Lading</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>