force-app/main/default/objects/Account/fields/Accepts_Electronic_Documents__c.field-meta.xml
<CustomField>
    <fullName>Accepts_Electronic_Documents__c</fullName>
    <label>Accepts Electronic Documents</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>