force-app/main/default/objects/Account/fields/Account_Characteristics__c.field-meta.xml
<CustomField>
    <fullName>Account_Characteristics__c</fullName>
    <label>Account Characteristics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Carta</fullName>
            </value>
            <value>
                <fullName>Comida</fullName>
            </value>
            <value>
                <fullName>KAM-JGV 18</fullName>
            </value>
            <value>
                <fullName>Música en directo y/o DJ</fullName>
            </value>
            <value>
                <fullName>OFF-AW Outlet</fullName>
            </value>
            <value>
                <fullName>OFF-Ben&amp;Glen</fullName>
            </value>
            <value>
                <fullName>OFF-Dauerdisplay</fullName>
            </value>
            <value>
                <fullName>OFF-Flaschen-Display</fullName>
            </value>
            <value>
                <fullName>OFF-GK gekauft</fullName>
            </value>
            <value>
                <fullName>OFF-JDTH Sampling</fullName>
            </value>
            <value>
                <fullName>OFF-Kühlschrank</fullName>
            </value>
            <value>
                <fullName>OFF-Mini-Cooler</fullName>
            </value>
            <value>
                <fullName>OFF-PicOS</fullName>
            </value>
            <value>
                <fullName>OFF-PMLD-HotSpot</fullName>
            </value>
            <value>
                <fullName>OFF-Premium Dauermodul</fullName>
            </value>
            <value>
                <fullName>OFF-Price Index Outlet</fullName>
            </value>
            <value>
                <fullName>OFF-Tannnenbaum</fullName>
            </value>
            <value>
                <fullName>ON-AW BFD Getränkekarten-Vereinbarung FY 19</fullName>
            </value>
            <value>
                <fullName>ON-AW Custom Barrel</fullName>
            </value>
            <value>
                <fullName>ON-BCB 2018</fullName>
            </value>
            <value>
                <fullName>ON-EJ Pouringoutlet FY19</fullName>
            </value>
            <value>
                <fullName>ON-FGH-PLV</fullName>
            </value>
            <value>
                <fullName>ON-FV Pouringoutlet FY19</fullName>
            </value>
            <value>
                <fullName>ON-GEDAT</fullName>
            </value>
            <value>
                <fullName>ON-GEDAT-Extranet</fullName>
            </value>
            <value>
                <fullName>ON-Getränkekartenvereinbarungen FY19</fullName>
            </value>
            <value>
                <fullName>ON-GJ Pouringoutlet FY19</fullName>
            </value>
            <value>
                <fullName>ON-GJ Tailormade FY 19</fullName>
            </value>
            <value>
                <fullName>ON-Jahresabsprache FY19 GRD</fullName>
            </value>
            <value>
                <fullName>ON-Jahresabsprache FY19 K/P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>