force-app/main/default/objects/Account/fields/Account_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Account_Cost_Center__c</fullName>
    <description>Mexico. Cost Center the account charges to for invoices</description>
    <inlineHelpText>Cost Center the account charges to for invoices</inlineHelpText>
    <label>Account Cost Center</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>