force-app/main/default/objects/Account/fields/Account_Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Licence_Number__c</fullName>
    <description>In Australia, this is the accounts liquor licence number.</description>
    <label>Account Licence Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>