force-app/main/default/objects/Account/fields/Account_Licence_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Licence_Type__c</fullName>
    <description>Accounts Trade Category</description>
    <label>Account Licence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>