force-app/main/default/objects/Account/fields/Account_Main_Brand__c.field-meta.xml
<CustomField>
    <fullName>Account_Main_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Mexico. Account Main Brand</description>
    <label>Account Main Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>MainAccountBrand</relationshipName>
    <type>Lookup</type>
</CustomField>