force-app/main/default/objects/Account/fields/Account_Name_Changed__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Changed__c</fullName>
    <formula>IF(!ISBLANK(Legal_Entity__c), IF (Name &lt;&gt; Legal_Entity__c, 1, 0), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name Changed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>