force-app/main/default/objects/Account/fields/Account_Name_Long_PL__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Long_PL__c</fullName>
    <label>Account Name Long</label>
    <length>100</length>
    <type>Text</type>
</CustomField>