force-app/main/default/objects/Account/fields/Account_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Account_Product_Count__c</fullName>
    <description>Account Product (Count)</description>
    <label>Account Product (Count)</label>
    <summaryFilterItems>
        <field>Account_Product__c.Available__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Account_Product__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>