force-app/main/default/objects/Account/fields/Account_Secondary_Brand__c.field-meta.xml
<CustomField>
    <fullName>Account_Secondary_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Mexico. Account secondary brand</description>
    <label>Account Secondary Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Accounts (Account Secondary Brand)</relationshipLabel>
    <relationshipName>SecondaryAccountBrand</relationshipName>
    <type>Lookup</type>
</CustomField>