force-app/main/default/objects/Account/fields/Account_Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Trading_Name__c</fullName>
    <formula>IF(ISBLANK(Legal_Entity__c), Name, Legal_Entity__c)</formula>
    <label>Account Trading Name</label>
    <type>Text</type>
</CustomField>