force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Australia Market Sub Group</description>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Duty Free</fullName>
            </value>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Sth Pacific Isl</fullName>
            </value>
            <value>
                <fullName>Whisky/ey</fullName>
            </value>
            <value>
                <fullName>Rum</fullName>
            </value>
            <value>
                <fullName>Tequila</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Craft</fullName>
            </value>
            <value>
                <fullName>Planter</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>