force-app/main/default/objects/Account/fields/Accounting_by_Kontor__c.field-meta.xml
<CustomField>
    <fullName>Accounting_by_Kontor__c</fullName>
    <label>Accounting by Kontor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GES</fullName>
            </value>
            <value>
                <fullName>GEV</fullName>
            </value>
            <value>
                <fullName>GR</fullName>
            </value>
            <value>
                <fullName>DBZ</fullName>
            </value>
            <value>
                <fullName>direct</fullName>
            </value>
            <value>
                <fullName>G5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>