force-app/main/default/objects/Account/fields/AccountOwnerNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountOwnerNumber__c</fullName>
    <description>Masks the Salesforce Id into a unreadable String</description>
    <formula>&quot;%$x&amp;&quot;&amp; Substitute(Substitute(Substitute(Substitute(right(right(lower(CASESAFEID(OwnerId)),15),4)&amp;left(right(lower(CASESAFEID(OwnerId)),15),11),&quot;0&quot;,&quot;.&quot;) ,&quot;5&quot;,&quot;/&quot;),&quot;a&quot;,&quot;K&quot;),&quot;6&quot;,&quot;a&quot;) &amp; &quot;T$I&quot;</formula>
    <label>AccountOwnerNumber</label>
    <type>Text</type>
</CustomField>