force-app/main/default/objects/Account/fields/Accounts_Covered__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Covered__c</fullName>
    <label>Accounts Covered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>