force-app/main/default/objects/Account/fields/Actionable_Segment__c.field-meta.xml
<CustomField>
    <fullName>Actionable_Segment__c</fullName>
    <label>Actionable Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>AB-A</fullName>
            </value>
            <value>
                <fullName>AB-B</fullName>
            </value>
            <value>
                <fullName>AB-C</fullName>
            </value>
            <value>
                <fullName>AB-D</fullName>
            </value>
            <value>
                <fullName>AB-E</fullName>
            </value>
            <value>
                <fullName>AB-HIGH ENERGY BAR-PREMIUM</fullName>
            </value>
            <value>
                <fullName>AB-HIGH ENERGY BAR-STANDARD</fullName>
            </value>
            <value>
                <fullName>AB-LOW ENERGY BAR-PREMIUM</fullName>
            </value>
            <value>
                <fullName>AB-LOW ENERGY BAR-STANDARD</fullName>
            </value>
            <value>
                <fullName>AB-LOW ENERGY BAR-SUPER PREMIUM</fullName>
            </value>
            <value>
                <fullName>AB-NIGHTCLUB</fullName>
            </value>
            <value>
                <fullName>AB-Other</fullName>
            </value>
            <value>
                <fullName>AB-RESTAURANT-PREMIUM</fullName>
            </value>
            <value>
                <fullName>AB-RESTAURANT-STANDARD</fullName>
            </value>
            <value>
                <fullName>AB-RESTAURANT-SUPER PREMIUM</fullName>
            </value>
            <value>
                <fullName>AU ALL</fullName>
            </value>
            <value>
                <fullName>AU KEY ACCOUNT</fullName>
            </value>
            <value>
                <fullName>AU ON PREMISE</fullName>
            </value>
            <value>
                <fullName>AU REGIONAL</fullName>
            </value>
            <value>
                <fullName>BC-A-BCLDB</fullName>
            </value>
            <value>
                <fullName>BC-A-LRS</fullName>
            </value>
            <value>
                <fullName>BC-B-BCLDB</fullName>
            </value>
            <value>
                <fullName>BC-B-LRS</fullName>
            </value>
            <value>
                <fullName>BC-C-BCLDB</fullName>
            </value>
            <value>
                <fullName>BC-C-LRS</fullName>
            </value>
            <value>
                <fullName>BC-D-BCLDB</fullName>
            </value>
            <value>
                <fullName>BC-D-LRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>