force-app/main/default/objects/Account/fields/Active_Account__c.field-meta.xml
<CustomField>
    <fullName>Active_Account__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>