force-app/main/default/objects/Account/fields/Activity_Segment__c.field-meta.xml
<CustomField>
    <fullName>Activity_Segment__c</fullName>
    <label>Activity Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>11-ELEVEN LIQUOR</fullName>
            </value>
            <value>
                <fullName>AB-Costco</fullName>
            </value>
            <value>
                <fullName>AB-RCLS</fullName>
            </value>
            <value>
                <fullName>ACE LIQUOR</fullName>
            </value>
            <value>
                <fullName>AFAM</fullName>
            </value>
            <value>
                <fullName>ALL_HQ CALL_CAM</fullName>
            </value>
            <value>
                <fullName>ALTA</fullName>
            </value>
            <value>
                <fullName>ANDERSON&#39;S LIQUOR</fullName>
            </value>
            <value>
                <fullName>BAJA</fullName>
            </value>
            <value>
                <fullName>BCLDB</fullName>
            </value>
            <value>
                <fullName>B K LIQUOR STORE</fullName>
            </value>
            <value>
                <fullName>BOSS LIQUOR</fullName>
            </value>
            <value>
                <fullName>CALGARY COOP</fullName>
            </value>
            <value>
                <fullName>CLASICA - PREMIUM</fullName>
            </value>
            <value>
                <fullName>COOP</fullName>
            </value>
            <value>
                <fullName>COSTCO</fullName>
            </value>
            <value>
                <fullName>CROWFOOT</fullName>
            </value>
            <value>
                <fullName>CROWN LIQUOR</fullName>
            </value>
            <value>
                <fullName>ECONO LIQUOR</fullName>
            </value>
            <value>
                <fullName>General Market</fullName>
            </value>
            <value>
                <fullName>GLOBAL LIQUOR</fullName>
            </value>
            <value>
                <fullName>High Energy Bar</fullName>
            </value>
            <value>
                <fullName>HOT &amp; TRENDY</fullName>
            </value>
            <value>
                <fullName>INDEPENDENT</fullName>
            </value>
            <value>
                <fullName>Large_3</fullName>
            </value>
            <value>
                <fullName>Large_A&amp;B</fullName>
            </value>
            <value>
                <fullName>Large_Diamond</fullName>
            </value>
            <value>
                <fullName>Large_Format</fullName>
            </value>
            <value>
                <fullName>Large_Platinum</fullName>
            </value>
            <value>
                <fullName>LIQUOR BANK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>