force-app/main/default/objects/Account/fields/Actual_Share_of_Shelf_NAW__c.field-meta.xml
<CustomField>
    <fullName>Actual_Share_of_Shelf_NAW__c</fullName>
    <label>Actual Share of Shelf NAW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>