force-app/main/default/objects/Account/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <inlineHelpText>Age Groups</inlineHelpText>
    <label>Age</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>18-20</fullName>
            </value>
            <value>
                <fullName>18-24</fullName>
            </value>
            <value>
                <fullName>19-25</fullName>
            </value>
            <value>
                <fullName>21-25</fullName>
            </value>
            <value>
                <fullName>25-35</fullName>
            </value>
            <value>
                <fullName>26-30</fullName>
            </value>
            <value>
                <fullName>26-35</fullName>
            </value>
            <value>
                <fullName>31-35</fullName>
            </value>
            <value>
                <fullName>35+</fullName>
            </value>
            <value>
                <fullName>36+</fullName>
            </value>
            <value>
                <fullName>Up to 30</fullName>
            </value>
            <value>
                <fullName>Over 30</fullName>
            </value>
            <value>
                <fullName>18-25</fullName>
            </value>
            <value>
                <fullName>35-45</fullName>
            </value>
            <value>
                <fullName>45+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>