force-app/main/default/objects/Account/fields/Age_Verification_Process__c.field-meta.xml
<CustomField>
    <fullName>Age_Verification_Process__c</fullName>
    <label>Age Verification Process</label>
    <type>TextArea</type>
</CustomField>