force-app/main/default/objects/Account/fields/Agg_shares_of_5_shareholders_in_family__c.field-meta.xml
<CustomField>
    <fullName>Agg_shares_of_5_shareholders_in_family__c</fullName>
    <description>FDC-PLFC</description>
    <label>Agg shares of 5% shareholders in family</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>