force-app/main/default/objects/Account/fields/Alco_cocktails__c.field-meta.xml
<CustomField>
    <fullName>Alco_cocktails__c</fullName>
    <label>Alco/cocktails</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>