force-app/main/default/objects/Account/fields/Allow_Merchandiser__c.field-meta.xml
<CustomField>
    <fullName>Allow_Merchandiser__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck if customer does not permit a merchandiser to visit store.</description>
    <label>Allow Merchandiser</label>
    <type>Checkbox</type>
</CustomField>