force-app/main/default/objects/Account/fields/Allows_Extra_POS__c.field-meta.xml
<CustomField>
    <fullName>Allows_Extra_POS__c</fullName>
    <inlineHelpText>1. &lt;200 m2 with &gt;70% alcohol turnover: retailer indicates the place
2. &gt;200 m2 with separate alcohol area: in separate alcohol area
3. &gt;200 m2 without separate alcohol area: if competitor has extra POS - install behind counter
+
Does the store allow?</inlineHelpText>
    <label>Allows Extra POS</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Nielsen_Space__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>