force-app/main/default/objects/Account/fields/Allows_POS__c.field-meta.xml
<CustomField>
    <fullName>Allows_POS__c</fullName>
    <inlineHelpText>Self-service stores &gt;200 m2 with separate alcohol area
+
Does the store allow?</inlineHelpText>
    <label>Allows POS</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Nielsen_Space__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>