force-app/main/default/objects/Account/fields/Announcement_for_Logistics__c.field-meta.xml
<CustomField>
    <fullName>Announcement_for_Logistics__c</fullName>
    <description>Infowelders</description>
    <label>Announcement for Logistics</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>