force-app/main/default/objects/Account/fields/Anual_Sales_Talk__c.field-meta.xml
<CustomField>
    <fullName>Anual_Sales_Talk__c</fullName>
    <inlineHelpText>...only choose yes if annual sales talk is closed and signed by customer!</inlineHelpText>
    <label>Anual Sales Talk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
            <value>
                <fullName>not relevant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>