force-app/main/default/objects/Account/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>INFOWELDERS</description>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>City__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Akasaka/Nagatacho/Toranomon</fullName>
            </value>
            <value>
                <fullName>Amagasaki</fullName>
            </value>
            <value>
                <fullName>Andong-si</fullName>
            </value>
            <value>
                <fullName>Ankang</fullName>
            </value>
            <value>
                <fullName>Ansan-si</fullName>
            </value>
            <value>
                <fullName>Anseong-si</fullName>
            </value>
            <value>
                <fullName>Anshan</fullName>
            </value>
            <value>
                <fullName>Anshun</fullName>
            </value>
            <value>
                <fullName>Anyang-si</fullName>
            </value>
            <value>
                <fullName>Anyer</fullName>
            </value>
            <value>
                <fullName>Asagiri/Kawagoe/Higashi Matsuyama</fullName>
            </value>
            <value>
                <fullName>Asan-si</fullName>
            </value>
            <value>
                <fullName>BAJIO</fullName>
            </value>
            <value>
                <fullName>Balikpapan</fullName>
            </value>
            <value>
                <fullName>Bandung</fullName>
            </value>
            <value>
                <fullName>Baoding</fullName>
            </value>
            <value>
                <fullName>Baoji</fullName>
            </value>
            <value>
                <fullName>Baotou</fullName>
            </value>
            <value>
                <fullName>Batam</fullName>
            </value>
            <value>
                <fullName>Beihai</fullName>
            </value>
            <value>
                <fullName>Beijing</fullName>
            </value>
            <value>
                <fullName>Bengbu</fullName>
            </value>
            <value>
                <fullName>Benxi</fullName>
            </value>
            <value>
                <fullName>Binzhou</fullName>
            </value>
            <value>
                <fullName>BKK Central</fullName>
            </value>
            <value>
                <fullName>BKK North</fullName>
            </value>
            <value>
                <fullName>BKK South</fullName>
            </value>
            <value>
                <fullName>Boeun-gun</fullName>
            </value>
            <value>
                <fullName>Bogor</fullName>
            </value>
            <value>
                <fullName>Bojonegoro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>